# my_clear_django

./: .gitignore  README.md  pyproject.toml
src/: db.sqlite3
src/apps/manufacturers/: apps.py
src/apps/staff/: admin.py  models.py
src/apps/staff/migrations/: 0001_initial.py
src/config/: settings.py
src/tests/utils/str_utils/: test_gen_hash_from_str.py
src/utils/: console_utils.py  str_utils.py
