[tool.poetry]
name = "operstore"
version = "0.1.0"
description = ""
authors = ["Виктор Дядищев <drviktord@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.4"
loguru = "^0.6.0"
pandas = "^1.5.3"
openpyxl = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
